--- a/views/singlegallery.pug
+++ b/views/singlegallery.pug
@@ -5,22 +5,26 @@ head
   title Express Gallery
   link(rel="stylesheet" type="text/css" href="/styles/styles.css")
 body
-  div(class="topBar")
-    div(class="headerDiv")
-      h1(class="header1") _ARCHITEKT
-  div(class="imgContent")
-    div(class="titleDiv")
-      p(class="uploader") #{gallery.author} -
-      p #{gallery.url}
-    img(class="upImg" src = gallery.url)
-    div(class="descriptDiv")
-      p(class="description") #{gallery.description}
-    p
-    button(type="submit" onclick='editRedirect()') Edit
-    form(method="POST" action="/gallery/" + gallery.id enctype="application/x-www-form-urlencoded")
-      input(type="hidden" name="_method" value="DELETE")
+  div(class="mainContent")
+    div(class="topBar")
+      div(class="headerDiv")
+        h1(class="header1") _ARCHITEKT
+    div(class="imgContent")
+      div(class="titleContainer")
+        p(class="uploader") #{gallery.author} -
+        p #{gallery.url}
+      div(class="picContainer")
+        img(class="upImg" src = gallery.url)
+        p(class="authorBar") #{gallery.author}
+      div(class="descriptContainer")
+        p(class="description") #{gallery.description}
       p
-      button(type="submit") Delete
+      div(class="editContainer")
+        button(class="buttons" type="submit" onclick='editRedirect()') Edit
+        form(method="POST" action="/gallery/" + gallery.id enctype="application/x-www-form-urlencoded")
+          input(type="hidden" name="_method" value="DELETE")
+          p
+          button(class="buttons" type="submit") Delete
 script.
   function editRedirect(){
     window.location="/gallery/#{gallery.id}/edit"}
