--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,8 +1,10 @@
 @import "sass/partials/clearfix";
 @import "sass/partials/reset";
+@import "sass/partials/singlegallery";
+@import "sass/partials/addphoto";
 
-$small: "(min-width: 100px) and (max-width: 600px)";
-$medium: "(min-width: 600px) and (max-width: 915px)";
+$small: "(min-width: 100px) and (max-width: 601px)";
+$medium: "(min-width: 602px) and (max-width: 915px)";
 $large: "(min-width: 915px)";
 
 $arial-font: Arial, Helvetica, sans-serif;
@@ -16,11 +18,26 @@ body{
     margin-left: auto;
     margin-right: auto;
   }
-  .buttons{
+  .buttonDiv{
     margin-top: 10px;
     margin-right: 20px;
     display: flex;
     justify-content: flex-end;
+  }
+  .buttons{
+    margin: 1px;
+    color: #7e8082;
+    background: rgba(0,0,0,0);
+    border-radius: 5px;
+    border: solid 2px #7e8082;
+  }
+  .buttons:hover{
+    border-color: #47484a;
+    color: #47484a;
+  }
+  buttons:active{
+    border-color: #5a5b5d;
+    color: #5a5b5d;
   }
   hr.line {
     width: 100%;
@@ -108,6 +125,8 @@ body{
     max-width: 100%;
     margin-left: auto;
     margin-right: auto;
+    overflow: hidden;
+    position: relative;
     @media #{$small}{
       max-height: 90%;
       max-width: 90%;
@@ -206,7 +225,6 @@ body{
       word-wrap: break-word;
     }
   }
-
   .titleDiv{
     @media #{$small}{
       box-sizing: border-box;
