--- a/views/index.pug
+++ b/views/index.pug
@@ -6,11 +6,11 @@ html(lang="en")
     link(rel="stylesheet" type="text/css" href="/styles/styles.css")
   body
     div(class="mainContent")
-      div(class="buttons")
+      div(class="buttonDiv")
         div(class="addImg")
-          button(type="submit" onclick='newImg()') Add Photo
+          button(class="buttons" type="submit" onclick='newImg()') Add Photo
         div(class="loginButton")
-          button(type="submit" onclick='redirect()') Login
+          button(class="buttons" type="submit" onclick='redirect()') Login
       div(class="hrDot")
         hr(class="dotted")
       div(class="topBar")
