--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -95,11 +95,11 @@ div.imgContent {
       margin-right: auto; } }
   @media (min-width: 602px) and (max-width: 915px) {
     .picContainer {
-      max-width: 100%;
+      width: 100%;
       margin-left: 2%; } }
   @media (min-width: 915px) {
     .picContainer {
-      width: 285px; } }
+      width: 100%; } }
 
 p.authorBar {
   color: white;
@@ -158,7 +158,8 @@ div.descriptContainer {
   background: transparent;
   margin-bottom: 10px;
   font-size: 16px;
-  height: 45px; }
+  height: 45px;
+  color: lightslategray; }
 
 .require {
   font-style: italic;
