--- a/sass/partials/_addphoto.scss
+++ b/sass/partials/_addphoto.scss
@@ -46,6 +46,7 @@ $arial-font: Arial, Helvetica, sans-serif;
   margin-bottom: 10px;
   font-size: 16px;
   height: 45px;
+  color: lightslategray;
 }
 .require{
   font-style: italic;
