--- a/sass/partials/_singlegallery.scss
+++ b/sass/partials/_singlegallery.scss
@@ -14,6 +14,7 @@ div.imgContent{
 .titleContainer{
   box-sizing: border-box;
   margin-bottom: 15px;
+  word-wrap: break-word;
 }
 .editContainer{
   display: flex;
@@ -38,6 +39,10 @@ div.imgContent{
   @media #{$large}{
     width: 100%;
   }
+}
+.upImg{
+  max-width: 100%;
+  max-height: 100%;
 }
 p.authorBar{
   color: white;
