--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -174,7 +174,20 @@ div.descriptContainer {
 body {
   color: gray;
   font-family: Arial, Helvetica, sans-serif;
-  text-align: left; }
+  text-align: left;
+  /* unvisited link */
+  /* visited link */
+  /* mouse over link */
+  /* selected link */ }
+  body a:link {
+    color: gray;
+    text-decoration: none; }
+  body a:visited {
+    color: gray; }
+  body a:hover {
+    color: #a0a0a0; }
+  body a:active {
+    color: gray; }
   body .mainContent {
     margin-left: auto;
     margin-right: auto; }
