--- a/views/singlegallery.pug
+++ b/views/singlegallery.pug
@@ -29,7 +29,7 @@ html(lang="en")
           form(method="POST" action="/gallery/" + gallery.id enctype="application/x-www-form-urlencoded")
             input(type="hidden" name="_method" value="DELETE")
             p
-            button(class="buttons" type="submit") Delete
+            button(class="buttons" type="submit" onclick="return confirm('Are you sure you want to delete the photo?')") Delete
 script.
   function editRedirect(){
     window.location="/gallery/#{gallery.id}/edit"}
